# kaitek_media

./: .gitignore  03-FatFs.c  CMakeLists.txt  main.cpp
.claude/: settings.json  settings.local.json
BM20_C/: CMakeLists.txt  prj.conf
BM20_C/.git_nested_backup/: COMMIT_EDITMSG  index
BM20_C/.git_nested_backup/gk/: config
BM20_C/.git_nested_backup/logs/: HEAD
BM20_C/.git_nested_backup/refs/heads/: master
BM20_C/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay
BM20_C/src/: main.c
NRF54l15/: CMakeLists.txt  prj.conf  sample.yaml
NRF54l15/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
NRF54l15/src/: main.c
_cmp_lcd/RP2350-Touch-LCD-2/Arduino/RP2350-Touch-LCD-2/: CST816D.cpp  CST816D.h  DEV_Config.cpp  DEV_Config.h  Debug.h  GUI_Paint.cpp  LCD_2in.cpp  LCD_2in.h  LCD_Test.h  RP2350-Touch-LCD-2.ino  font24CN.cpp
_cmp_lcd/RP2350-Touch-LCD-2/C/01-LCD/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt
_cmp_lcd/RP2350-Touch-LCD-2/C/01-LCD/examples/: CMakeLists.txt  ImageData.c  LCD_2in_test.c
_cmp_lcd/RP2350-Touch-LCD-2/C/01-LCD/lib/Config/: DEV_Config.c  DEV_Config.h
_cmp_lcd/RP2350-Touch-LCD-2/C/01-LCD/lib/LCD/: LCD_2in.c
_cmp_lcd/RP2350-Touch-LCD-2/C/01-LCD/lib/Touch/: CST816D.c  CST816D.h
_cmp_lcd/RP2350-Touch-LCD-2/C/01-LCD/uf2/: 01-LCD.uf2
_cmp_lcd/RP2350-Touch-LCD-2/C/02-CAM/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt
_cmp_lcd/RP2350-Touch-LCD-2/C/02-CAM/examples/: CMakeLists.txt  LCD_2in_test.c
_cmp_lcd/RP2350-Touch-LCD-2/C/02-CAM/lib/CAM/: CMakeLists.txt  ov5640.c  ov5640.h  picampinos.pio.h
_cmp_lcd/RP2350-Touch-LCD-2/C/02-CAM/lib/LCD/: CMakeLists.txt  LCD_2in.c  LCD_2in.h
_cmp_lcd/RP2350-Touch-LCD-2/C/02-CAM/uf2/: 02-CAM.uf2
_cmp_lcd/RP2350-Touch-LCD-2/C/03-FatFs/example/: CMakeLists.txt
audio_pwm/: CMakeLists.txt  prj.conf
audio_pwm/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay
audio_pwm/src/: main.c
config/: hw_config.c
docs/: CAM_LCD_FLOW.md  LCD_API.md  gen_docs.py
include/: command.h
lib/CAM/: cam.c  cam.h  ov5640.c  ov5640.h  picampinos.pio
lib/LCD/: DEV_Config.c  DEV_Config.h  GUI_Paint.h  LCD_2in.c  LCD_2in.h
scripts/: cam_id_test.ttl  cam_lcd_snap_test.ttl  cam_snap_test.ttl  live_cam_test.ttl  nrf_stream_test.ttl  spi_loopback_conn_test.ttl
src/: cmd_cam.cpp  cmd_cam.h  cmd_lcd.cpp  cmd_lcd.h  cmd_nrf.cpp  cmd_nrf.h  cmd_sd.cpp  cmd_sd.h  command.cpp
src/include/: hw_config.h
src/sd_driver/SDIO/: rp2040_sdio.pio
src/sd_driver/SPI/: sd_card_spi.c
src/src/: glue.c
uf2/: 03-FatFs.uf2
